style.css: Set logo width instead of height to avoid layout shift

--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body {
 }
 
 #logo {
-  width: 5em;
+  height: 5em;
 }
 
 footer {
